# council.knowledge.base

./: .env.example  .gitignore  app.py  harrisburg_clerk_meeting_2026-06-29_buildnotes.md  harrisburg_knowledge_base_spec.md  merge_grant_application.md  pyproject.toml  pytest.ini  requirements-ingest.txt  requirements.txt  run.sh  skills-lock.json
.superpowers/sdd/: task-7-report.md
docs/: 753199898.html  753199900.html  753222403.html  ingestion-workflow.md
scripts/: evaluate.py  extract_goals.py  extract_grants.py  extract_meetings.py  ingest.py  reextract_police_vacancies.py  reextract_quarterly.py  reextract_quarterly_batch.py  reingest.py  reingest_resolutions.py  review_report.py  run-local.sh
sql/: migrate_2026_07_09_guardrails.sql  migrate_2026_07_10_projects.sql  migrate_2026_07_10_vacancy_count.sql  migrate_2026_07_14_type_proposals.sql  migrate_2026_07_14_vacancy_source_file.sql  migrate_2026_07_15_registry_description.sql  schema.sql
src/: config.py  models.py
src/dashboard/: __init__.py  aggregator.py  projects.py  review_questions.py
src/evaluation/: evaluator.py  ingestion_judge.py  suite.py
src/extraction/: graph_extractor.py  sql_extractor.py
src/ingestion/: approval.py  chunker.py  classifier.py  detector.py  metadata.py  names.py  pipeline.py  profiler.py  quality.py  registry.py  schema_compiler.py  triage.py  validation.py
src/llm/: client.py
src/query/: clarity.py  classifier.py  pipeline.py  retriever.py  synthesizer.py
templates/: dashboard.html  index.html  redesign.html
tests/: test_admin_costs_route.py  test_ask_route.py
(+113 files in other folders)
