[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "harrisburg-knowledge-base"
version = "0.1.0"
description = "Harrisburg City Government Knowledge Base"
requires-python = ">=3.11"
dependencies = [
    # Document parsing
    "unstructured[pdf]>=0.15.0",
    "pdfplumber>=0.11.0",
    "pdf2image>=1.17.0",
    "pillow>=10.0.0",
    # LLM / embeddings
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    # Vector store
    "qdrant-client>=1.12.0",
    # SQL
    "psycopg2-binary>=2.9.0",
    "asyncpg>=0.29.0",
    # Graph
    "neo4j>=5.26.0",
    # API framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # Background jobs
    "celery>=5.4.0",
    "redis>=5.2.0",
    # Observability
    "langsmith>=0.2.0",
    # Utilities
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.0",
    "tenacity>=9.0.0",
    "structlog>=24.0.0",
    "typer>=0.15.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
